--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,254 @@
+absl-py==2.1.0
+aiohappyeyeballs==2.3.4
+aiohttp==3.10.0
+aiohttp_socks==0.9.0
+aiosignal==1.3.1
+altair==5.3.0
+annotated-types==0.7.0
+argon2-cffi==23.1.0
+argon2-cffi-bindings==21.2.0
+arrow==1.3.0
+asttokens==2.4.1
+astunparse==1.6.3
+async-lru==2.0.4
+async-timeout==4.0.3
+attrs==23.2.0
+Babel==2.15.0
+backcall==0.2.0
+bleach==6.1.0
+blinker==1.8.2
+bottle==0.12.25
+Brotli==1.1.0
+browser-cookie3==0.19.1
+cachetools==5.4.0
+cairocffi==1.7.1
+CairoSVG==2.7.1
+certifi==2024.7.4
+cffi==1.16.0
+click==8.1.7
+colorama==0.4.4
+comm==0.2.2
+command-not-found==0.3
+commonmark==0.9.1
+contourpy==1.2.1
+cryptography==3.4.8
+cssselect2==0.7.0
+curl_cffi==0.7.1
+cycler==0.12.1
+dbus-python==1.2.18
+debugpy==1.8.2
+decorator==5.1.1
+defusedxml==0.7.1
+distro==1.7.0
+distro-info==1.1+ubuntu0.2
+docopt==0.6.2
+duckduckgo_search==6.2.6
 easyocr==1.7.1
+exceptiongroup==1.2.2
+executing==2.0.1
+fastapi==0.112.0
+fastjsonschema==2.20.0
+filelock==3.15.4
+Flask==3.0.3
+flatbuffers==24.3.25
+fonttools==4.53.1
+fqdn==1.5.1
+frozenlist==1.4.1
+fsspec==2024.6.1
 g4f==0.3.2.3
+gast==0.6.0
+gitdb==4.0.11
+GitPython==3.1.43
+google-pasta==0.2.0
+greenlet==1.1.2
+grpcio==1.65.2
+h5py==3.11.0
+httpcore==1.0.5
+httplib2==0.20.2
+httpx==0.27.0
+huggingface-hub==0.24.5
+idna==3.3
+imageio==2.34.2
+importlib-metadata==4.6.4
+-e git+https://github.com/Lauel09/wasserstoff-AiInternTask.git@0e548bd566d1d832f1406d25969983db0224fa97#egg=internship_task
+ipykernel==6.29.5
+ipython==8.12.3
+isoduration==20.11.0
+itsdangerous==2.2.0
+jedi==0.19.1
+jeepney==0.7.1
+Jinja2==3.1.4
+joblib==1.4.2
+json5==0.9.25
+jsonpointer==3.0.0
+jsonschema==4.23.0
+jsonschema-specifications==2023.12.1
+jupyter-events==0.10.0
+jupyter-lsp==2.2.5
+jupyter_client==8.6.2
+jupyter_core==5.7.2
+jupyter_server==2.14.2
+jupyter_server_terminals==0.5.3
+jupyterlab==4.2.4
+jupyterlab_pygments==0.3.0
+jupyterlab_server==2.27.3
+keras==3.4.1
+keyring==23.5.0
+kiwisolver==1.4.5
+language-selector==0.1
+launchpadlib==1.10.16
+lazr.restfulclient==0.14.4
+lazr.uri==1.0.6
+lazy_loader==0.4
+libclang==18.1.1
+loguru==0.7.2
+lz4==4.3.3
+markdown2==2.5.0
+MarkupSafe==2.1.5
 matplotlib==3.9.1
-numpy==2.0.1
-opencv_python==4.10.0.84
+matplotlib-inline==0.1.7
+meson==0.61.2
+mistune==3.0.2
+ml-dtypes==0.4.0
+more-itertools==8.10.0
+mpmath==1.3.0
+msgpack==1.0.3
+multidict==6.0.5
+namex==0.0.8
+nbclient==0.10.0
+nbconvert==7.16.4
+nbformat==5.10.4
+nest-asyncio==1.6.0
+netifaces==0.11.0
+networkx==3.3
+ninja==1.11.1.1
+notebook==7.2.1
+notebook_shim==0.2.4
+numpy==1.26.4
+nvidia-cublas-cu12==12.1.3.1
+nvidia-cuda-cupti-cu12==12.1.105
+nvidia-cuda-nvrtc-cu12==12.1.105
+nvidia-cuda-runtime-cu12==12.1.105
+nvidia-cudnn-cu12==9.1.0.70
+nvidia-cufft-cu12==11.0.2.54
+nvidia-curand-cu12==10.3.2.106
+nvidia-cusolver-cu12==11.4.5.107
+nvidia-cusparse-cu12==12.1.0.106
+nvidia-nccl-cu12==2.20.5
+nvidia-nvjitlink-cu12==12.6.20
+nvidia-nvtx-cu12==12.1.105
+oauthlib==3.2.0
+olefile==0.46
+opencv-python==4.10.0.84
+opt-einsum==3.3.0
+optree==0.12.1
+overrides==7.7.0
+packaging==24.1
 pandas==2.2.2
-Pillow==9.0.1
-Requests==2.32.3
-setuptools==59.6.0
+pandocfilters==1.5.1
+parso==0.8.4
+pexpect==4.8.0
+pickleshare==0.7.5
+pillow==10.4.0
+pipreqs==0.5.0
+plyer==2.1.0
+primp==0.5.5
+prometheus_client==0.20.0
+prompt_toolkit==3.0.47
+protobuf==4.25.4
+proxy-tools==0.1.0
+ptyprocess==0.7.0
+pure_eval==0.2.3
+py-cpuinfo==9.0.0
+pyarrow==17.0.0
+pyclipper==1.3.0.post5
+pycparser==2.22
+pycryptodome==3.20.0
+pycryptodomex==3.20.0
+pydantic==2.8.2
+pydantic_core==2.20.1
+pydeck==0.9.1
+PyExecJS==1.5.1
+Pygments==2.11.2
+PyGObject==3.42.1
+PyJWT==2.3.0
+pynvim==0.4.2
+pyparsing==2.4.7
+pytesseract==0.3.10
+python-apt==2.4.0+ubuntu3
+python-bidi==0.6.0
+python-dateutil==2.9.0.post0
+python-json-logger==2.0.7
+python-socks==2.5.0
+pywebview==5.1
+pyxdg==0.27
+PyYAML==5.4.1
+pyzmq==26.0.3
+referencing==0.35.1
+regex==2024.7.24
+reportlab==3.6.8
+requests==2.32.3
+rfc3339-validator==0.1.4
+rfc3986-validator==0.1.1
+rich==11.2.0
+rpds-py==0.19.1
+safetensors==0.4.3
+scikit-image==0.24.0
+scikit-learn==1.5.1
+scipy==1.14.0
+seaborn==0.13.2
+SecretStorage==3.3.1
+Send2Trash==1.8.3
+shapely==2.0.5
+six==1.16.0
+smmap==5.0.1
+stack-data==0.6.3
+starlette==0.37.2
 streamlit==1.37.0
+sympy==1.13.1
+systemd-python==234
 tabulate==0.9.0
+tenacity==8.5.0
+tensorboard==2.17.0
+tensorboard-data-server==0.7.2
+tensorflow==2.17.0
+tensorflow-io-gcs-filesystem==0.37.1
+terminado==0.18.1
+tf_keras==2.17.0
+threadpoolctl==3.5.0
+tifffile==2024.7.24
+tinycss2==1.3.0
+tokenizers==0.19.1
+toolz==0.12.1
+torch==2.4.0
+torchvision==0.19.0
+tornado==6.4.1
+tqdm==4.66.4
+traitlets==5.14.3
+transformers==4.43.3
+triton==3.0.0
+typer==0.12.3
+types-python-dateutil==2.9.0.20240316
+typing_extensions==4.12.2
+tzdata==2024.1
+ubuntu-advantage-tools==8001
+ubuntu-drivers-common==0.0.0
+ufw==0.36.1
 ultralytics==8.2.71
+ultralytics-thop==2.0.0
+unattended-upgrades==0.1
+uri-template==1.3.0
+urllib3==1.26.5
+uvicorn==0.30.5
+wadllib==1.3.6
+watchdog==4.0.1
+wcwidth==0.2.13
+webcolors==24.6.0
+websocket-client==1.8.0
+Werkzeug==3.0.3
+wrapt==1.16.0
+xdg==5
+xkit==0.0.0
+yarg==0.1.9
+yarl==1.9.4
+zipp==1.0.0
